# LLM-Data-Flow

./: .gitignore  README.md  job.sh  main.py  pyproject.toml
code/: README.md  diminish.py  finalize_corrected_dataset.py  generate_final_dataset.py  main.py  post_processing.py  procedural_text_process.py
data/: allrecipes-easy-gravy.json  allrecipes-easy-pilaf.json  allrecipes-frosted-brown-sugar-cookies.json  allrecipes-lime-cilantro-rice.json  allrecipes-robbis-mms-cookies.json
outs/: README.md
outs_1/: allrecipes-15-minute-fried-rice.json  allrecipes-agave-mustard-daikon-radish-salad.json  allrecipes-almost-white-castle-hamburgers.json  allrecipes-amaretto-fudge-affection.json  allrecipes-amaretto-roasted-chicken.json  allrecipes-amazing-whole-wheat-pizza-crust.json  allrecipes-amish-casserole.json  allrecipes-amys-triple-decker-turkey-bacon-sandwich.json  allrecipes-ancho-honey-mustard-sauce.json  allrecipes-anise-cookies.json  allrecipes-apple-butterscotch-bars.json  allrecipes-apple-cinnamon-oatmeal.json  allrecipes-apple-currant-cookies.json  allrecipes-apple-walnut-salad-with-cranberry-vinaigrette.json  allrecipes-apricot-shortbread-bars.json  allrecipes-apricot-swan-cream-puffs.json  allrecipes-apricotcranberry-chutney.json  allrecipes-asiago-hash-browns.json  allrecipes-aviyal.json  allrecipes-avocado-and-edamame-dip.json  allrecipes-avocado-shrimp-and-endive-salad.json  allrecipes-bachelors-flamin-hot-mexican-bean-dip.json  allrecipes-backyard-cooper-burgers.json  allrecipes-bacon-cheeseburger-meatloaf.json  allrecipes-bacon-chestnuts.json  (+475 more)
(+5460 files in other folders)
