[project]
name = "data-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pip>=25.0.1",
    "setuptools>=78.1.0",
    "spacy[cuda12x]>=3.8.5",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]
